--- a/hangman.css
+++ b/hangman.css
@@ -24,6 +24,14 @@
     margin-top : 2em;
 }
 
+#quickstart-sign-in
+{
+    display : block;
+    margin-left:auto;
+    margin-right:auto;
+    margin-top : 1cm;
+}
+
 #noose
 {
     display : block;
